V1.2 用户管理模块、文件分享功能实现